<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_exportador_archivos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uva.asm2.cluster02.modelo.ImportActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/ruta"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:id="@+id/rutaTextoPlano" />

            <TextView
                android:text="@string/textview"
                android:layout_width="0dp"
                android:layout_height="19dp"
                android:id="@+id/rutaText"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                android:layout_weight="1" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="347dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="28dp"
            android:id="@+id/lista_importador" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextNobre"
            android:hint="@string/nombre_del_archivo" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:weightSum="1"
            style="?android:attr/buttonBarStyle">

            <Button
                android:text="@string/eliminar_datos_e_importar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/boton_eliminar_importar"
                style="?android:attr/buttonBarButtonStyle"
                />

            <Button
                android:text="@string/importar_datos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/aceptar_Archivo"
                style="?android:attr/buttonBarButtonStyle"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>