<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_movimiento_ampliado"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.uva.asm2.cluster02.vista.DetalleFragment"
    android:weightSum="1">

    <ImageView
        android:contentDescription="@string/imagen_ampliada"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/imagen_ampliada" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_below="@+id/imagen_ampliada">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            tools:layout_height="wrap_content">

            <TextView
                android:text="@string/textview"
                android:layout_width="181dp"
                android:layout_height="26dp"
                android:id="@+id/tipo_ampliado" />

            <TextView
                android:text="@string/textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/precio_ampliado" />
        </LinearLayout>

        <TextView
            android:text="@string/textview"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:id="@+id/descripcion_ampliada" />

        <TextView
            android:text="@string/textview"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:id="@+id/fecha_ampliada" />

        <Button
            android:text="@string/borrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/delete" />

        <Button
            android:text="@string/compartir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/share" />

    </LinearLayout>
</RelativeLayout>