<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uva.asm2.cluster02.vista.NewMovement">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:text="@string/a_adir_movimiento"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_item_cabecera"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/spinner_tipo"
            android:entries="@array/tipo_item"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@+id/add_item_cabecera" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/titulo"
            android:ems="10"
            android:id="@+id/add_item_titulo"
            android:layout_below="@+id/spinner_tipo"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/descripcion"
            android:ems="10"
            android:id="@+id/add_item_descripcion"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/add_item_titulo"
            android:layout_alignLeft="@+id/add_item_titulo"
            android:layout_alignStart="@+id/add_item_titulo" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:layout_marginTop="15dp"
            android:id="@+id/selector"
            android:layout_below="@+id/add_item_descripcion"
            android:layout_alignLeft="@+id/add_item_descripcion"
            android:layout_alignStart="@+id/add_item_descripcion"
            android:layout_centerHorizontal="true" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/spinner_categoria"
            android:entries="@array/categoria_item"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@+id/selector" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@+id/spinner_categoria"
            android:layout_marginTop="15dp"
            android:id="@+id/add_item_cantidad"
            android:layout_centerHorizontal="true"
            android:hint="@string/cantidad"
            android:inputType="numberDecimal" />

        <TextView
            android:text="@string/euro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_item_euro"
            android:layout_alignTop="@+id/add_item_cantidad"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toRightOf="@+id/add_item_cantidad"
            android:layout_toEndOf="@+id/add_item_cantidad"
            android:layout_alignBottom="@+id/add_item_cantidad" />

        <Button
            android:text="@string/a_adir"
            android:layout_width="wrap_content"
            android:background="@color/blue"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:id="@+id/add_item_btn_add"
            android:layout_below="@+id/add_item_cantidad"
            android:layout_alignLeft="@+id/add_item_cantidad"
            android:layout_alignStart="@+id/add_item_cantidad" />

        <Button
            android:text="@string/borrar"
            android:background="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_item_btn_clear"
            android:layout_marginTop="32dp"
            android:layout_below="@+id/add_item_cantidad"
            android:layout_alignRight="@+id/add_item_cantidad"
            android:layout_alignEnd="@+id/add_item_cantidad" />




    </RelativeLayout>
    </ScrollView>

</FrameLayout>
